--- a/my-react/package.json
+++ b/my-react/package.json
@@ -44,6 +44,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
+    "weixin-js-sdk": "^1.3.3",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
