--- a/my-react/package.json
+++ b/my-react/package.json
@@ -30,7 +30,8 @@
     "jest": "20.0.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
-    "postcss-loader": "2.0.8",
+    "postcss-loader": "^3.0.0",
+    "postcss-px2rem-exclude": "^0.0.6",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.4.2",
@@ -105,5 +106,5 @@
         "^/api": "/"
       }
     }
-  } 
+  }
 }
